[project]
name = "AutoContainerMod"
version = "1.0.62"
description = "Automatically opens containers (chests, lockers, etc.) when you get close to them.\nConfigurable range and can be toggled on/off.\n"
[[project.authors]]
name = "galqawala"

[tool.sdkmod]
name = "AutoContainerMod"
supported_games = [ "BL1",]
coop_support = "ClientSide"
download = "https://github.com/galqawala/AutoContainerMod/releases/latest/download/AutoContainerMod.sdkmod"

[tool.sdkmod.license]
name = "GPL3"
url = "https://choosealicense.com/licenses/gpl-3.0/"
